--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+v0.5.5
+------
+- KSP 1.05
+- Updated bundled IFS 
+- Updated CRP version
+- Added MiniAVC version checking
+
 v0.5.4
 ------
 - Tweaked a few part thermal values
