--- a/changelog.txt
+++ b/changelog.txt
@@ -5,13 +5,14 @@ v0.7.2
 - Modular Annular Truss Adapter's collider is now hollow
 - Modular Annular Truss Adapter now has toggleable internal core piece
 - Fixed Modular Annular Truss Docking Connector's missing description
+- Fixed CTT patch re-activating deprecated part
 - Added Modular Spinal Truss: 3.75m size category square truss
 -- Regular truss: hollow, saddle, demi and solid variants. Optional core and endcaps
 -- Mini truss: hollow, saddle, demi and solid variants. Optional core and endcaps
 -- Micro truss: hollow, saddle, demi and solid variants. Optional core and endcaps
 -- Spinal to 2.5m adapter
 -- Spinal to 3.75m adapter
--- Spinal docking port
+-- Spinal locking docking port
 
 v0.7.1
 ------
