--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v0.7.3
+------
+- Marked for KSP 1.2.2
+- Updated bundled MM to 2.7.5
+- Updated bundled B9PartSwitch to 1.5.3
+
 v0.7.2
 ------
 - Marked for KSP 1.2.1
