--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@ v0.7.4
 - Fixed download link in .version file
 - Added Lithium, Argon, LqdHydrogen, LqdHydrogen/Oxidizer tanks to tank-containing trusses. Only enabled if CRP is installed
 - Added cryo cooling abilities to tank-containing trusses. Only enabled if CRP and CryoTanks are installed
-- Added basic tank types to large and medium hex trusses (LF, LF/Ox, Ox, Xenon, Ore)
+- Fixed extraneous subtype node definitions on crewed octo-truss parts
 
 v0.7.3
 ------
