--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v0.8.0
+------
+- KSP 1.3
+- Normalized some part internal names
+- Converted to KSP 1.3 localization string methods
+
 v0.7.6
 ------
 - Fixed octo-truss and spinal docking connector snap offsets
