--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,9 @@ v0.8.0
 ------
 - KSP 1.3
 - Normalized some part internal names
+- Changed a large number of part names for additional clarity
 - Converted to KSP 1.3 localization string methods
+- Added hibernation to octo-truss drone core
 
 v0.7.6
 ------
