--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v0.8.3
+------
+- Updated bundled B9PartSwitch to 1.9.0
+- Updated MM to 2.8.1
+- Stack symmetry on 2.5m multi-adapter can now take advantage of new B9PartSwitch functions
+
 v0.8.2
 ------
 - Update B9PartSwitch to 1.8.1
