--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+v0.8.4
+------
+- KSP 1.3.1
+- Dependency update
+- Fix 30 degree angle attach node on pressurized octo-truss
+
 v0.8.3
 ------
 - Updated bundled B9PartSwitch to 1.9.0
