Additional work on hex truss tanks

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,16 +6,21 @@ v1.0.0
 - Updated B9PartSwitch to
 - Reworked crewed octo-trusses to match SSPXr art
 - Converted all parts with lights to use config animations
-- Revised textures of LH2/LH2O octo-truss variants to match up with upcoming CryoTanks update
+- Revised textures of LH2/LH2O octo-truss variants to match up with CryoTanks update
+- Revised textures of Lithium octo-truss variants to match up with NFP update
+- Revisions to specular/normal maps of octo-trusses
+- Tuned docking port models to better match revised SSPXr modules
+- Added variant of docking ports with no stripes
 - New/modified parts:
 -- Replaced Cubic Octagonal Strut with new model, renamed to Cubic-Family Strut
+-- Replaced Not=Rockomax Micronode and Octagonal Strut with new models
 -- Added Cubic-Family struts in 3 sizes, can switch between cubic, triangular and planar
 -- Added adapter from Cubic/Triangular to 0.625m stack
 -- Added LFO, LF, Ox, Xenon, Mono/Ec, Ore storage to the two larger Hexa-Trusses
 -- Added LH2, LH2O, Lithium, Argon storage to the two larger Hexa-Trusses if CRP is installed
--- Added Extra-Large Docking Connector (hollow 3.75m docking port)
 -- Added Kerbodyne Skeletal Structural Connector
 -- Added Linear Docking Connector
+- Corrected configuration of boiloff modules when CryoTanks is installed 
 
 v0.8.4
 ------
