Config/localization fixes for new parts

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@ v1.0.0
 - Updated MM to
 - Updated B9PartSwitch to
 - Reworked crewed octo-trusses to match SSPXr art
-- Converted all parts with lights to use config animations
+- Converted all parts with lights to use config-based animations
 - Revised textures of LH2/LH2O octo-truss variants to match up with CryoTanks update
 - Revised textures of Lithium octo-truss variants to match up with NFP update
 - Revisions to specular/normal maps of octo-trusses
@@ -13,14 +13,16 @@ v1.0.0
 - Added variant of docking ports with no stripes
 - New/modified parts:
 -- Replaced Cubic Octagonal Strut with new model, renamed to Cubic-Family Strut
--- Replaced Not=Rockomax Micronode and Octagonal Strut with new models
+-- Replaced Not-Rockomax Micronode and Octagonal Strut with new models
 -- Added Cubic-Family struts in 3 sizes, can switch between cubic, triangular and planar
 -- Added adapter from Cubic/Triangular to 0.625m stack
 -- Added LFO, LF, Ox, Xenon, Mono/Ec, Ore storage to the two larger Hexa-Trusses
 -- Added LH2, LH2O, Lithium, Argon storage to the two larger Hexa-Trusses if CRP is installed
--- Added Kerbodyne Skeletal Structural Connector
--- Added Linear Docking Connector
-- Corrected configuration of boiloff modules when CryoTanks is installed 
+-- Added SM-1 Stack Adapter (1.25 to 0.625m adapter)
+-- Added Kerbodyne Skeletal Structural Connector (3.75 to 2.5m adapter)
+-- Added Grip-O-Tron Linear Docking Connector
+-- Added Grip-O-Tron XL Linear Docking Connector
+- Corrected configuration of boiloff modules when CryoTanks is installed
 
 v0.8.4
 ------
