--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@ v1.0.1
 ------
 - Fixed localization issue with SM-1 Stack Adapter
 - Fixed hex-truss lithium tank model offset
+- Fixed a missing normal map
 
 v1.0.0
 ------
