--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+v1.0.4
+------
+- KSP 1.5
+- Updated MM to 3.1.0
+- Updated B9PartSwitch to 2.4.0
+- Fixed a issue with some parts that would cause B9PS to throw errors in versions >2.4.0
+
 v1.0.3
 ------
 - KSP 1.4.5
