--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 v1.1.0
 ------
 - Updated ModuleManager to 4.0.2
-- Mod-wide greyscale and specular recalibration to be consistent with Restock
+- Greyscale and specular recalibration for all trusses to be consistent with Restock (adapters will be tackled later)
 - Revised truss lithium tanks to use reflective shader for foil as in NFP 1.1+
 - Revised truss argon tanks to use reflective shader for internal-style argon tanks as in NFP 1.1+
 - Revised truss liquid hydrogen tank textures to align with future CryoTanks direction
@@ -13,6 +13,7 @@ v1.1.0
 - Fixed larger radial docking connector's docking transform being recessed into the model too far
 - Added normal maps to spinal trusses
 - Added normal maps to annular trusses
+- Added normal maps to radial adapters
 - Fixed some warnings related to B9PS 2.7.x
 - Fixed error in CryoTanks patch for some LH2-containing truss parts
 
