--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+v1.1.3
+------
+- Updated B9PartSwitch to 2.9.0
+- Updated some part variants to use new B9PS 2.9.0 features
+
 v1.1.2
 ------
 - Updated B9PartSwitch to 2.8.0
