--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+v1.2.0
+------
+- KSP 1.8.x
+- Updated MM to 4.1.0
+- Updated B9PartSwitch to 2.12.1
+- Updated MM patch pass specifiers where needed
+
 v1.1.4
 ------
 - Fixed colliders on angled octo-truss 30 and 45 degree variants
