--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+v1.2.2
+------
+- KSP 1.9.x
+- Updated MM to 4.1.3
+- Updated B9PartSwitch to 2.13.0
+- Updates to Russian and Chinese localizations
+
 v1.2.1
 ------
 - Fix find and replace error
